Project/Task_Manager_application/Kubernetes_Config_files/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 0
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: shettysagar272/task-manager-appl:Backend01
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 4000           # Service port inside cluster
    targetPort: 4000     # Container port
