Project/Task_Manager_application/Kubernetes_Config_files/database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database-container
        image: postgres:16
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/
      
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: task-manager-pvc



---

apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    app: database
  ports:
  - name: http
    port: 5432
    targetPort: 5432
  type: ClusterIP
