Project/Task_Manager_application/Kubernetes_Config_files/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: shettysagar272/task-manager-appl:Frontend02


---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 8080
    targetPort: 3000
  type: ClusterIP
